--- a/templates/components/CategoryCard.html.twig
+++ b/templates/components/CategoryCard.html.twig
@@ -5,9 +5,7 @@
         <img src="/images/{{ imageUrl }}" alt="{{ name }}" class="w-full h-full object-cover" />
       {% else %}
         <div class="w-full h-full flex items-center justify-center bg-gray-200">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-          </svg>
+          <i data-lucide="bar-chart" class="h-12 w-12 text-gray-400"></i>
         </div>
       {% endif %}
     </div>
@@ -30,9 +28,7 @@
       <img src="/images/{{ imageUrl }}" alt="{{ name }}" class="w-full h-full object-cover" />
     {% else %}
       <div class="w-full h-full flex items-center justify-center bg-gray-300">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-        </svg>
+        <i data-lucide="bar-chart" class="h-16 w-16 text-gray-400"></i>
       </div>
     {% endif %}
     <div class="absolute inset-0 flex flex-col justify-end p-6">
@@ -48,9 +44,7 @@
       <div class="mt-4 opacity-0 group-hover:opacity-100 transition-opacity">
         <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-white text-gray-800">
           Voir les produits
-          <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-          </svg>
+          <i data-lucide="arrow-right" class="ml-1 h-4 w-4"></i>
         </span>
       </div>
     </div>
