--- a/templates/account/address-form.html.twig
+++ b/templates/account/address-form.html.twig
@@ -7,9 +7,7 @@
     <div class="max-w-2xl mx-auto">
       <div class="flex items-center mb-6">
         <a href="{{ path('app_account_addresses') }}" class="mr-4 text-gray-600 hover:text-gray-900">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-          </svg>
+          <i data-lucide="chevron-left" class="h-5 w-5"></i>
         </a>
         <h1 class="text-3xl font-playfair">
           {% if edit is defined and edit %}
