--- a/templates/admin/set-baker.html.twig
+++ b/templates/admin/set-baker.html.twig
@@ -7,9 +7,7 @@
     <div class="max-w-2xl mx-auto">
       <div class="flex items-center mb-6">
         <a href="{{ path('app_admin_users') }}" class="mr-4 text-gray-600 hover:text-gray-900">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-          </svg>
+          <i data-lucide="chevron-left" class="h-5 w-5"></i>
         </a>
         <h1 class="text-3xl font-playfair">Définir comme boulanger</h1>
       </div>
@@ -21,9 +19,7 @@
           <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-6">
             <div class="flex">
               <div class="flex-shrink-0">
-                <svg class="h-5 w-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
-                </svg>
+                <i data-lucide="alert-triangle" class="h-5 w-5 text-yellow-400"></i>
               </div>
               <div class="ml-3">
                 <p class="text-sm text-yellow-700">
@@ -61,9 +57,7 @@
           <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4">
             <div class="flex">
               <div class="flex-shrink-0">
-                <svg class="h-5 w-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
-                </svg>
+                <i data-lucide="alert-triangle" class="h-5 w-5 text-yellow-400"></i>
               </div>
               <div class="ml-3">
                 <p class="text-sm text-yellow-700">
