--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -8,9 +8,7 @@
       <div class="flex items-center justify-between mb-6">
         <div class="flex items-center">
           <a href="{{ path('app_admin') }}" class="mr-4 text-gray-600 hover:text-gray-900">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-            </svg>
+            <i data-lucide="chevron-left" class="h-5 w-5"></i>
           </a>
           <h1 class="text-3xl font-playfair">Gestion des utilisateurs</h1>
         </div>
@@ -114,16 +112,12 @@
                 <div class="mt-3 pt-3 border-t border-gray-100">
                   {% if 'ROLE_BAKER' in user.roles %}
                     <a href="{{ path('app_admin_user_remove_baker', {'id': user.id}) }}" class="inline-flex items-center justify-center w-full px-3 py-1.5 border border-red-300 text-xs font-medium rounded-md text-red-700 bg-white hover:bg-red-50" onclick="return confirm('Êtes-vous sûr de vouloir retirer ce rôle ?')">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
-                      </svg>
+                      <i data-lucide="x" class="h-4 w-4 mr-1"></i>
                       Retirer boulanger
                     </a>
                   {% else %}
                     <a href="{{ path('app_admin_user_set_baker', {'id': user.id}) }}" class="inline-flex items-center justify-center w-full px-3 py-1.5 border border-blue-300 text-xs font-medium rounded-md text-blue-700 bg-white hover:bg-blue-50">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                        <path d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
-                      </svg>
+                      <i data-lucide="user-plus" class="h-4 w-4 mr-1"></i>
                       Définir comme boulanger
                     </a>
                   {% endif %}
@@ -134,9 +128,7 @@
         </div>
       {% else %}
         <div class="bg-white shadow-md rounded-lg p-8 text-center border border-gray-100">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto text-gray-400 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-          </svg>
+          <i data-lucide="user" class="h-12 w-12 mx-auto text-gray-400 mb-4"></i>
           <h2 class="text-xl font-playfair mb-2">Aucun utilisateur trouvé</h2>
           <p class="text-gray-600 mb-6">Aucun utilisateur n'est enregistré sur le site pour le moment.</p>
         </div>
