--- a/templates/baker/index.html.twig
+++ b/templates/baker/index.html.twig
@@ -20,9 +20,7 @@
         <div class="bg-white rounded-lg p-6 shadow-md hover:shadow-lg border border-gray-100">
           <div class="flex items-center">
             <div class="rounded-full bg-blue-100 p-3 mr-4">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-              </svg>
+              <i data-lucide="shopping-bag" class="h-6 w-6 text-blue-600"></i>
             </div>
             <div>
               <h2 class="text-lg font-semibold">Produits</h2>
@@ -32,9 +30,7 @@
           <div class="mt-4">
             <a href="{{ path('app_baker_products') }}" class="text-blue-600 hover:text-blue-800 font-medium flex items-center">
               Voir les produits
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
+              <i data-lucide="arrow-right" class="h-5 w-5 ml-1"></i>
             </a>
           </div>
         </div>
@@ -42,9 +38,7 @@
         <div class="bg-white rounded-lg p-6 shadow-md hover:shadow-lg border border-gray-100">
           <div class="flex items-center">
             <div class="rounded-full bg-green-100 p-3 mr-4">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
-              </svg>
+              <i data-lucide="clipboard" class="h-6 w-6 text-green-600"></i>
             </div>
             <div>
               <h2 class="text-lg font-semibold">Commandes</h2>
@@ -54,9 +48,7 @@
           <div class="mt-4">
             <a href="{{ path('app_baker_orders') }}" class="text-green-600 hover:text-green-800 font-medium flex items-center">
               Voir les commandes
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
+              <i data-lucide="arrow-right" class="h-5 w-5 ml-1"></i>
             </a>
           </div>
         </div>
@@ -92,19 +84,13 @@
 
           <div class="flex space-x-3">
             <a href="{{ path('app_baker_bakery_details') }}" class="text-sm text-blue-600 hover:text-blue-900 flex items-center">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
-                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
-              </svg>
+              <i data-lucide="eye" class="h-4 w-4 mr-1"></i>
               Détails
             </a>
 
             <a href="{{ path('app_bakery_show', {'slug': bakery.slug}) }}" class="text-sm text-gray-600 hover:text-gray-900 flex items-center">
               Voir la boutique
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" viewBox="0 0 20 20" fill="currentColor">
-                <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
-                <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
-              </svg>
+              <i data-lucide="external-link" class="h-4 w-4 ml-1"></i>
             </a>
           </div>
         </div>
