--- a/templates/baker/product-form.html.twig
+++ b/templates/baker/product-form.html.twig
@@ -7,9 +7,7 @@
     <div class="max-w-2xl mx-auto">
       <div class="flex items-center mb-6">
         <a href="{{ path('app_baker_products') }}" class="mr-4 text-gray-600 hover:text-gray-900">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-          </svg>
+          <i data-lucide="chevron-left" class="h-5 w-5"></i>
         </a>
         <h1 class="text-3xl font-playfair">
           {% if edit is defined and edit %}
@@ -130,9 +128,7 @@
                   <img src="{{ image }}" alt="{{ product.name }}" class="rounded-md w-full h-32 object-cover">
                   <div class="absolute bottom-0 right-0 p-2">
                     <button type="button" class="p-1 bg-red-600 text-white rounded-full hover:bg-red-700" title="Supprimer l'image">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                      </svg>
+                      <i data-lucide="trash" class="h-4 w-4"></i>
                     </button>
                   </div>
                 </div>
