--- a/templates/baker/products.html.twig
+++ b/templates/baker/products.html.twig
@@ -8,16 +8,12 @@
       <div class="flex items-center justify-between mb-6">
         <div class="flex items-center">
           <a href="{{ path('app_baker') }}" class="mr-4 text-gray-600 hover:text-gray-900">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-            </svg>
+            <i data-lucide="chevron-left" class="h-5 w-5"></i>
           </a>
           <h1 class="text-3xl font-playfair">Produits</h1>
         </div>
         <a href="{{ path('app_baker_product_new') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-black bg-[#EDA239] hover:bg-[#EFAF7D] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#EDA239]">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
-          </svg>
+          <i data-lucide="plus" class="h-5 w-5 mr-2"></i>
           Ajouter un produit
         </a>
       </div>
@@ -104,24 +100,17 @@
                 </div>
                 <div class="mt-4 pt-3 border-t border-gray-100 flex justify-between">
                   <a href="{{ path('app_baker_product_edit', {'id': product.id}) }}" class="text-sm text-[#EDA239] hover:text-[#EFAF7D] inline-flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                      <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-                    </svg>
+                    <i data-lucide="pencil" class="h-4 w-4 mr-1"></i>
                     Modifier
                   </a>
                   <a href="{{ path('app_product_page', {'slug': product.slug}) }}" class="text-sm text-gray-600 hover:text-gray-900 inline-flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                      <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
-                      <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
-                    </svg>
+                    <i data-lucide="eye" class="h-4 w-4 mr-1"></i>
                     Voir
                   </a>
                   <form method="post" action="{{ path('app_baker_product_delete', {'id': product.id}) }}" class="inline-flex items-center" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce produit ?');">
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
                     <button type="submit" class="text-sm text-red-600 hover:text-red-900 bg-transparent border-none p-0 inline-flex items-center cursor-pointer font-medium">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
-                      </svg>
+                      <i data-lucide="trash-2" class="h-4 w-4 mr-1"></i>
                       Supprimer
                     </button>
                   </form>
@@ -132,15 +121,11 @@
         </div>
       {% else %}
         <div class="bg-white shadow-md rounded-lg p-8 text-center border border-gray-100">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto text-gray-400 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-          </svg>
+          <i data-lucide="shopping-bag" class="h-12 w-12 mx-auto text-gray-400 mb-4"></i>
           <h2 class="text-xl font-playfair mb-2">Aucun produit trouvé</h2>
           <p class="text-gray-600 mb-6">Commencez par ajouter un nouveau produit à votre catalogue.</p>
           <a href="{{ path('app_baker_product_new') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-black bg-[#EDA239] hover:bg-[#EFAF7D] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#EDA239]">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
-            </svg>
+            <i data-lucide="plus" class="h-5 w-5 mr-2"></i>
             Ajouter mon premier produit
           </a>
         </div>
