--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -156,15 +156,14 @@
         {% endfor %}
       {% else %}
         <div class="text-center py-12 bg-white rounded-lg shadow-md w-full">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-gray-300 mx-auto mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-          </svg>
+          <i class="[&>svg]:h-16 [&>svg]:w-16 text-gray-300 mx-auto mb-4 lucide lucide-package-x"></i>
           <p class="text-gray-500 mb-4">Aucune boulangerie partenaire n'a été trouvée</p>
           <a href="{{ path('app_bakery_list') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-black bg-[#EDA239] hover:bg-[#EFAF7D]">
             Voir toutes les boutiques
           </a>
         </div>
       {% endif %}
+
     </div>
   </div>
 {% endblock %}
