--- a/templates/bakery/show.html.twig
+++ b/templates/bakery/show.html.twig
@@ -174,6 +174,7 @@
                   name="{{ product.name }}"
                   description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                   productId="{{ product.id }}"
+                  bakeryId="{{ product.bakery.id }}"
               />
             {% endfor %}
           </div>
@@ -193,6 +194,7 @@
                   name="{{ product.name }}"
                   description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                   productId="{{ product.id }}"
+                  bakeryId="{{ product.bakery.id }}"
               />
             {% endfor %}
           </div>
