--- a/templates/category/bakery_category.html.twig
+++ b/templates/category/bakery_category.html.twig
@@ -29,6 +29,7 @@
                 name="{{ product.name }}"
                 description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                 productId="{{ product.id }}"
+                bakeryId="{{ product.bakery.id }}"
             />
           {% endfor %}
         </div>
