--- a/templates/index_page/favorites.html.twig
+++ b/templates/index_page/favorites.html.twig
@@ -94,6 +94,7 @@
                   name="{{ product.name }}"
                   description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
                   productId="{{ product.id }}"
+                  bakeryId="{{ product.bakery.id }}"
               />
             {% endfor %}
           </div>
